--- a/mystyle.css
+++ b/mystyle.css
@@ -18,7 +18,7 @@ a:hover {
 
 div.standard {
     border: 1px solid black;
-    background-color: pink;
+    background-color: #CECE2B;;
     box-shadow: 2px 2px 7px 1px green;
     padding-top: 20px;
     padding-right: 30px;
